[package]
name = "rpage"
version = "0.1.0"
edition = "2021"
description = "A Rust browser automation library inspired by DrissionPage"
license = "MIT"
repository = "https://github.com/hithotmay/rpage"

[dependencies]
chromiumoxide = { version = "0.9", features = ["fetcher", "zip0"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "cookies", "gzip", "brotli", "deflate", "stream", "multipart"] }
reqwest_cookie_store = "0.10"
cookie_store = "0.22"
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
url = "2"
futures = "0.3"
tokio-stream = "0.1"
sxd-document = "0.3"
sxd-xpath = "0.4"
tracing = "0.1"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "session_mode"
path = "examples/session_mode.rs"

[[example]]
name = "locator_demo"
path = "examples/locator_demo.rs"

[[example]]
name = "switch_mode"
path = "examples/switch_mode.rs"

[[example]]
name = "listen_network"
path = "examples/listen_network.rs"
